"Terms & conditions page"

--- a/frontend/pages/terms.html
+++ b/frontend/pages/terms.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="container">
         <div class="tp-container">
             <div class="tp-main-left">
                 <h2 class="tp-terms-head">Terms of service and privacy policy</h2>
