--- a/frontend/pages/products-python.html
+++ b/frontend/pages/products-python.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/products-python.css">
     <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Products | Python</title>
 </head>
 
 <body>
