updated class names

--- a/frontend/pages/products-python.html
+++ b/frontend/pages/products-python.html
@@ -47,7 +47,7 @@
         <h2>Library Authentication Codes</h2>
         <article>
             <h3>Python</h3>
-            <section class="pp_verify section">
+            <section class="pp_verify pp_section">
                 <h4>User Verify Code</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur
@@ -62,7 +62,7 @@
                     <button type="button">Download</button>
                 </div>
             </section>
-            <section class="pp_usage section">
+            <section class="pp_usage pp_section">
                 <h4>Example Usage</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur
@@ -77,7 +77,7 @@
                     <button type="button">Download</button>
                 </div>
             </section>
-            <section class="pp_doc section">
+            <section class="pp_doc pp_section">
                 <h4>Document</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur
@@ -92,7 +92,7 @@
                     <button type="button">Download</button>
                 </div>
             </section>
-            <section class="pp_article section">
+            <section class="pp_article pp_section">
                 <h4>Articles</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur
