updated class names

--- a/frontend/pages/products-python.html
+++ b/frontend/pages/products-python.html
@@ -42,7 +42,7 @@
             <i class="menu_btn fa-solid fa-bars"></i>
         </div>
     </header>
-    <main>
+    <main class="pp_main">
         <h1>PRODUCTS</h1>
         <h2>Library Authentication Codes</h2>
         <article>
