header class name edit

--- a/frontend/pages/products-python.html
+++ b/frontend/pages/products-python.html
@@ -13,8 +13,8 @@
     <title>Products | Python</title>
 </head>
 
-<body>
-    <header>
+<body class="pp_body">
+    <header class="pp_header">
         <h2 class="company-logo">AUTH-WIKI</h2>
         <nav class="desktop_nav">
             <a href="">About</a>
