header name reversal

--- a/frontend/pages/products-python.html
+++ b/frontend/pages/products-python.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="pp_body">
-    <header class="pp_header">
+    <header>
         <h2 class="company-logo">AUTH-WIKI</h2>
         <nav class="desktop_nav">
             <a href="">About</a>
