landing page code

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -1,217 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AUTH-WIKI | Home</title>
-    <link rel="stylesheet" type="text/css" href="./css/landing.css" />
-    <script
-      src="https://kit.fontawesome.com/1b2bdedf91.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="../css/base.css">
+        <link rel="stylesheet" type="text/css" href="../css/landing.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
+        <title>AUTH-WIKI | Home</title>
+    </head>
+
+<body>
     <header>
-      <h2 class="company-logo">AUTH-WIKI</h2>
-      <nav class="desktop_nav">
-        <a href="">About</a>
-        <a href="">Products</a>
-        <a href="">Developers</a>
-        <div>
-          <input type="text" placeholder="Search" />
-          <i class="fa-solid fa-magnifying-glass search-icon"></i>
-        </div>
-        <a class="login-btn" href="">Login</a>
-        <button>Sign Up</button>
-      </nav>
-      <div class="search-bar">
-        <input type="text" placeholder="Search" />
-        <i class="fa-solid fa-magnifying-glass search-icon"></i>
-      </div>
-      <div class="mobile_nav">
-        <nav class="nav_card hide">
-          <a href="">About</a>
-          <a href="">Products</a>
-          <a href="">Developers</a>
-          <a class="login-btn" href="">Login</a>
-          <button>Sign Up</button>
+        <h2 class="company-logo">AUTH_WIKI</h2>
+        <nav class="desktop_nav">
+            <a href="">About</a>
+            <a href="">Products</a>
+            <a href="">Developers</a>
+            <div class="search-bar">
+                <input type="text" placeholder="Search">
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            </div>
+            <button>Login</button>
+            <button class="signup-btn">Sign Up</button>
         </nav>
-        <i class="menu_btn fa-solid fa-bars"></i>
-      </div>
+        <div class="mob_search-bar">
+            <input type="text" placeholder="Search">
+            <i class="fa-solid fa-magnifying-glass search-icon"></i>
+        </div>
+        <div class="mobile_nav">
+            <nav class="nav_card hide">
+                <a href="">About</a>
+                <a href="">Products</a>
+                <a href="">Developers</a>
+                <button class="login-btn">Login</button>
+                <a href="">Sign Up</a>
+            </nav>
+            <i class="menu_btn fa-solid fa-bars"></i>
+        </div>
     </header>
     <div class="middle">
-      <div class="middle1">
-        <div class="middle1a">
-          <div class="middle1ai">
-            <h1>Authentication Code Library for Developers</h1>
-            <br />
-            <p>
-              Every developer has a tab to open here on AUTH_WIKI. Our library
-              is extremely flexible and modular.
-            </p>
-          </div>
-          <div class="middle1aii">
-            <img src="#" alt="#" />
-          </div>
+        <div class="middle1">
+            <div class="middle1a">
+                <div class="middle1ai">
+                    <h1>Authentication Code Library for Developers</h1>
+                    <br />
+                    <p>
+                        Every developer has a tab to open here on AUTH_WIKI. Our library
+                        is extremely flexible and modular.
+                    </p>
+                </div>
+                <div class="middle1aii">
+                    <img src="#" alt="#" />
+                </div>
+            </div>
+            <div class="middle1b">
+                <div class="middle1bi">
+                    <a href="#">
+                        <img src="#" alt="#" />
+                        <p>
+                            Create dynamic and interactive web content like applications and
+                            browsers with Javascript.
+                        </p>
+                        <br />
+                        <p>Learn more...</p>
+                    </a>
+                </div>
+                <div class="middle1bii">
+                    <a href="#">
+                        <img src="#" alt="#" />
+                        <p>
+                            Build websites, software, automate tasks, and conduct data
+                            analysis with Python.
+                        </p>
+                        <br />
+                        <p>Learn more...</p>
+                    </a>
+                </div>
+            </div>
+            <div class="middle1c">
+                <a href="#"><button>view all Strategies</button></a>
+            </div>
         </div>
-        <div class="middle1b">
-          <div class="middle1bi">
-            <a href="#">
-              <img src="#" alt="#" />
-              <p>
-                Create dynamic and interactive web content like applications and
-                browsers with Javascript.
-              </p>
-              <br />
-              <p>Learn more...</p>
-            </a>
-          </div>
-          <div class="middle1bii">
-            <a href="#">
-              <img src="#" alt="#" />
-              <p>
-                Build websites, software, automate tasks, and conduct data
-                analysis with Python.
-              </p>
-              <br />
-              <p>Learn more...</p>
-            </a>
-          </div>
+        <div class="middle2">
+            <div class="middle2a">
+                <h1>Contribute and Interact with Code Samples in our Community</h1>
+                <br />
+                <h3>
+                    Find and contribute answers to technical challenges you and others
+                    face when you code.
+                </h3>
+                <br />
+                <button>Join The Community</button>
+            </div>
+            <div class="middle2b">
+                <img src="" alt="" />
+                <img src="" alt="" />
+            </div>
         </div>
-        <div class="middle1c">
-          <a href="#"><button>view all Strategies</button></a>
+        <div class="middle3">
+            <div class="middle3a">
+                <h1>Authentication made easy with AUTH_WIKI.</h1>
+                <p>
+                    Whether you are building your first login page or an expert in all
+                    thing identity, our documentation will help you understand Auth_Wiki
+                    and use it in your application.
+                </p>
+            </div>
+            <div class="middle3b">
+                <div class="middle3bi">
+                    <img src="#" alt="#" />
+                    <h3>Tutorials</h3>
+                </div>
+                <div class="middle3bi">
+                    <img src="#" alt="#" />
+                    <h3>Guidelines</h3>
+                </div>
+                <div class="middle3bi">
+                    <img src="#" alt="#" />
+                    <h3>References</h3>
+                </div>
+                <div class="middle3bi">
+                    <img src="#" alt="#" />
+                    <h3>Conceptions</h3>
+                </div>
+            </div>
+            <div class="middle3c">
+                <button>View documentation</button>
+            </div>
         </div>
-      </div>
-      <div class="middle2">
-        <div class="middle2a">
-          <h1>Contribute and Interact with Code Samples in our Community</h1>
-          <br />
-          <h3>
-            Find and contribute answers to technical challenges you and others
-            face when you code.
-          </h3>
-          <br />
-          <button>Join The Community</button>
+        <div class="middle4">
+            <div class="midddle4a">
+                <div class="middle4ai">
+                    <div>rectangle</div>
+                    <div>
+                        <h3>UNAUTHENTICATED</h3>
+                    </div>
+                </div>
+                <div class="middle4aii">
+                    <p>
+                        A Public Space to View The Platform and Basic Information About
+                        it.
+                    </p>
+                </div>
+                <div class="middle4aiii"><button>Join Community</button></div>
+            </div>
+            <div class="middle4b">
+                <div class="middle4bi">
+                    <div>rectangle</div>
+                    <div>
+                        <h3>AUTHENTICATED</h3>
+                    </div>
+                </div>
+                <div class="middle4bii">
+                    <p>
+                        Have Full Access to The Platform Contribute However Way, View Code
+                        Samples and be Able to Download Codes.
+                    </p>
+                </div>
+                <div class="middle4biii"><button>Get Started</button></div>
+            </div>
         </div>
-        <div class="middle2b">
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <div class="middle5">
+            <div class="middle5a">
+                <h1>Team AUTH_WIKI</h1>
+                <p>
+                    Our team is dedicated to building great software to solve the
+                    problems our customers face everyday.
+                </p>
+                <a href="#"><button>Meet The Team</button></a>
+            </div>
+            <div class="middle5b">
+                <img src="#" alt="#" />
+            </div>
         </div>
-      </div>
-      <div class="middle3">
-        <div class="middle3a">
-          <h1>Authentication made easy with AUTH_WIKI.</h1>
-          <p>
-            Whether you are building your first login page or an expert in all
-            thing identity, our documentation will help you understand Auth_Wiki
-            and use it in your application.
-          </p>
+        <div class="middle6">
+            <h1>I4GxZURI TEAM 7</h1>
         </div>
-        <div class="middle3b">
-          <div class="middle3bi">
-            <img src="#" alt="#" />
-            <h3>Tutorials</h3>
-          </div>
-          <div class="middle3bi">
-            <img src="#" alt="#" />
-            <h3>Guidelines</h3>
-          </div>
-          <div class="middle3bi">
-            <img src="#" alt="#" />
-            <h3>References</h3>
-          </div>
-          <div class="middle3bi">
-            <img src="#" alt="#" />
-            <h3>Conceptions</h3>
-          </div>
-        </div>
-        <div class="middle3c">
-          <button>View documentation</button>
-        </div>
-      </div>
-      <div class="middle4">
-        <div class="midddle4a">
-          <div class="middle4ai">
-            <div>rectangle</div>
-            <div><h3>UNAUTHENTICATED</h3></div>
-          </div>
-          <div class="middle4aii">
-            <p>
-              A Public Space to View The Platform and Basic Information About
-              it.
-            </p>
-          </div>
-          <div class="middle4aiii"><button>Join Community</button></div>
-        </div>
-        <div class="middle4b">
-          <div class="middle4bi">
-            <div>rectangle</div>
-            <div><h3>AUTHENTICATED</h3></div>
-          </div>
-          <div class="middle4bii">
-            <p>
-              Have Full Access to The Platform Contribute However Way, View Code
-              Samples and be Able to Download Codes.
-            </p>
-          </div>
-          <div class="middle4biii"><button>Get Started</button></div>
-        </div>
-      </div>
-      <div class="middle5">
-        <div class="middle5a">
-          <h1>Team AUTH_WIKI</h1>
-          <p>
-            Our team is dedicated to building great software to solve the
-            problems our customers face everyday.
-          </p>
-          <a href="#"><button>Meet The Team</button></a>
-        </div>
-        <div class="middle5b">
-          <img src="#" alt="#" />
-        </div>
-      </div>
-      <div class="middle6">
-        <h1>I4GxZURI TEAM 7</h1>
-      </div>
     </div>
     <footer>
-      <h2 class="company-logo">AUTH-WIKI</h2>
-      <nav class="footer_nav">
-        <section>
-          <h4>Company</h4>
-          <a href="/">About</a>
-          <a href="/">FAQs</a>
-          <a href="/">Teams</a>
-          <a href="/">Community</a>
-        </section>
-        <section>
-          <h4>Products</h4>
-          <a href="/">Supported Libraries</a>
-          <a href="/">Articles</a>
-          <a href="/">Platforms</a>
-        </section>
-        <section>
-          <h4>Documentation</h4>
-          <a href="/">Tutorials</a>
-          <a href="/">Guidelines</a>
-          <a href="/">Reference</a>
-          <a href="/">Conception</a>
-        </section>
-        <section>
-          <h4>Contact Us</h4>
-          <a href="/">Get in Touch</a>
-          <a href="/">Report Issue</a>
-          <a href="/">Connect</a>
-          <a href="/">Help</a>
-        </section>
-      </nav>
-      <div class="socials">
-        <a href="/"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="/"><i class="fa-brands fa-twitter"></i></a>
-        <a href="/"><i class="fa-brands fa-pinterest"></i></a>
-        <a href="/"><i class="fa-brands fa-instagram"></i></a>
-      </div>
+        <h2 class="company-logo">AUTH-WIKI</h2>
+        <nav class="footer_nav">
+            <section>
+                <h4>Company</h4>
+                <a href="/">About</a>
+                <a href="/">FAQs</a>
+                <a href="/">Teams</a>
+                <a href="/">Community</a>
+            </section>
+            <section>
+                <h4>Products</h4>
+                <a href="/">Supported Libraries</a>
+                <a href="/">Articles</a>
+                <a href="/">Platforms</a>
+            </section>
+            <section>
+                <h4>Documentation</h4>
+                <a href="/">Tutorials</a>
+                <a href="/">Guidelines</a>
+                <a href="/">Reference</a>
+                <a href="/">Conception</a>
+            </section>
+            <section>
+                <h4>Contact Us</h4>
+                <a href="/">Get in Touch</a>
+                <a href="/">Report Issue</a>
+                <a href="/">Connect</a>
+                <a href="/">Help</a>
+            </section>
+        </nav>
+        <div class="socials">
+            <a href="/"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="/"><i class="fa-brands fa-twitter"></i></a>
+            <a href="/"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
