Remove middle section

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -43,7 +43,7 @@
             <i class="menu_btn fa-solid fa-bars"></i>
         </div>
     </header>
-    <div class="middle">
+    <!-- <div class="middle">
         <div class="middle1">
             <div class="middle1a">
                 <div class="middle1ai">
@@ -181,7 +181,8 @@
         <div class="middle6">
             <h1>I4GxZURI TEAM 7</h1>
         </div>
-    </div>
+    </div> -->
+    <h1>Landing page</h1>
     <footer>
         <h2 class="company-logo">AUTH-WIKI</h2>
         <nav class="footer_nav">
