remove unjustified content

--- a/frontend/pages/product.html
+++ b/frontend/pages/product.html
@@ -48,7 +48,7 @@
         <h2>Library Authentication Codes</h2>
         <article>
             <h3>Python</h3>
-            <section class="pp_verify pp_section">
+            <!-- <section class="pp_verify pp_section">
                 <h4>User Verify Code</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur
@@ -61,7 +61,7 @@
                 <div class="pp_buttons-container">
                     <button type="button">View</button>                    
                 </div>
-            </section>
+            </section> -->
             <section class="pp_usage pp_section">
                 <h4>Example Usage</h4>
                 <p>
