search box adjusted

--- a/frontend/pages/search_overlay.html
+++ b/frontend/pages/search_overlay.html
@@ -11,10 +11,10 @@
 
 <body>
     <main class="so-main">
-        <div>
-            <img src="../Images/search-normal.png" alt="">
-            <input class="so-search" type="text" placeholder="Search">
-            <img src="../Images/x.png" alt="">
+        <div class="so-top">
+            <img class="so-search-icon" src="../Images/search-normal.png" alt="">
+            <input class="so-search" type="text" placeholder="Search" name="so-search-input">  
+            <img class="so-x" src="../Images/x.png" alt="">   
         </div>
         <div class="so-codesample-row">
             <div class="so-codesamples so-codesamples-left">
