--- a/frontend/pages/search_overlay.html
+++ b/frontend/pages/search_overlay.html
@@ -13,8 +13,8 @@
     <main class="so-main">
         <div class="so-top">
             <img class="so-search-icon" src="../Images/search-normal.png" alt="">
-            <input class="so-search" type="text" placeholder="Search" name="so-search-input">  
-            <img class="so-x" src="../Images/x.png" alt="">   
+            <input class="so-search" type="text" placeholder="Search" name="so-search-input">
+            <img class="so-x" src="../Images/x.png" alt="">
         </div>
         <div class="so-codesample-row">
             <div class="so-codesamples so-codesamples-left">
@@ -23,60 +23,104 @@
                 <div class="so-code-react">
                     <ul>
                         <li><img src="../Images/frame.png" alt=""></li>
-                        <li><p>100</p></li>
-                        <li><img src="../Images/star.png" alt=""></li>
-                        <li><p>10</p>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
                         </li>
                     </ul>
                     <a href="#">Learn more ...</a>
-                </div> 
+                </div>
             </div>
-            <div class="so-codesamples  so-codesamples-right">
+            <div class="so-codesamples">
                 <img src="../Images/python.png" alt="">
                 <p>Build websites, software, automate tasks, and conduct data analysis with python.</p>
                 <div class="so-code-react">
                     <ul>
                         <li><img src="../Images/frame.png" alt=""></li>
-                        <li><p>100</p></li>
-                        <li><img src="../Images/star.png" alt=""></li>
-                        <li><p>10</p>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
                         </li>
                     </ul>
                     <a href="#">Learn more ...</a>
-                </div> 
+                </div>
             </div>
-        </div>
-        <div class="so-codesample-row">
-            <div class="so-codesamples  so-codesamples-left">
+            <div class="so-codesamples">
+                <img src="../Images/js.png" alt="">
+                <p>Build websites, software, automate tasks, and conduct data analysis with python.</p>
+                <div class="so-code-react">
+                    <ul>
+                        <li><img src="../Images/frame.png" alt=""></li>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
+                        </li>
+                    </ul>
+                    <a href="#">Learn more ...</a>
+                </div>
+            </div>
+
+            <div class="so-codesamples">
                 <img src="../Images/python.png" alt="">
                 <p>Build websites, software, automate tasks, and conduct data analysis with python.</p>
                 <div class="so-code-react">
                     <ul>
                         <li><img src="../Images/frame.png" alt=""></li>
-                        <li><p>100</p></li>
-                        <li><img src="../Images/star.png" alt=""></li>
-                        <li><p>10</p>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
                         </li>
                     </ul>
                     <a href="#">Learn more ...</a>
-                </div> 
+                </div>
             </div>
-            <div class="so-codesamples  so-codesamples-right">
+            <div class="so-codesamples">
                 <img src="../Images/js.png" alt="">
                 <p>Create dynamic and interactive web content like applications and browsers and JavaScript.</p>
                 <div class="so-code-react">
                     <ul>
                         <li><img src="../Images/frame.png" alt=""></li>
-                        <li><p>100</p></li>
-                        <li><img src="../Images/star.png" alt=""></li>
-                        <li><p>10</p>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
                         </li>
                     </ul>
                     <a href="#">Learn more ...</a>
-                </div> 
+                </div>
+            </div>
+            <div class="so-codesamples">
+                <img src="../Images/python.png" alt="">
+                <p>Build websites, software, automate tasks, and conduct data analysis with python.</p>
+                <div class="so-code-react">
+                    <ul>
+                        <li><img src="../Images/frame.png" alt=""></li>
+                        <li>
+                            <p>100</p>
+                        </li>
+                        <li><img class="so-like" src="../Images/star.png" alt=""></li>
+                        <li>
+                            <p>10</p>
+                        </li>
+                    </ul>
+                    <a href="#">Learn more ...</a>
+                </div>
             </div>
         </div>
-
     </main>
 </body>
 
