page title change

--- a/frontend/pages/product-page.html
+++ b/frontend/pages/product-page.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
-    <title>Products | Python</title>
+    <title>Products</title>
 </head>
 
 <body class="page_body">
