--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,7 +181,10 @@
             <h1>I4GxZURI TEAM 7</h1>
         </div>
     </div> -->
-    <h1>Landing page</h1>
+        <h1>Landing Page</h1>
+    </div>
+
+    
     <footer>
         <h2 class="company-logo">AUTH-WIKI</h2>
         <nav class="footer_nav">
@@ -220,6 +223,8 @@
             <a href="/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./js/code.js"></script>
 </body>
 
 </html>
