--- a/frontend/terms/terms.html
+++ b/frontend/terms/terms.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/terms.css">
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="terms.css">
 </head>
 
 <body>
