--- a/frontend/signup/signup.html
+++ b/frontend/signup/signup.html
@@ -5,16 +5,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Sign Up</title>
-      <link rel="stylesheet" href="signup.css">
-      <script src="../js/signup.js"></script>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-      <!-- <script src="https://use.fontawesome.com/36efd5f4d0.js"></script> -->
-      <script src="https://kit.fontawesome.com/3e26edd0f3.js" crossorigin="anonymous"></script>
-
-
-
+      <link rel="stylesheet" href="../css/base.css">
+      <link rel="stylesheet" href="signup.css">
+      <script src="https://kit.fontawesome.com/3e26edd0f3.js" crossorigin="anonymous" defer></script>   
 </head>
 <body>
     <!-- <header>
