refactor product page

--- a/frontend/product/product.html
+++ b/frontend/product/product.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product</title>
     <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" type="text/css" href="../css/product.css">
+    <link rel="stylesheet" type="text/css" href="product.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous"></script>
-    <title>Products | Python</title>
+    <script src="https://kit.fontawesome.com/1b2bdedf91.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body class="pp_body">
