refactor terms&conditions page

--- a/frontend/terms/terms.html
+++ b/frontend/terms/terms.html
@@ -41,7 +41,7 @@
                 <button class="tp-btn">Continue</button>
             </div>
             <div class="tp-main-right">
-                <img class="tp-img" src="../Images/terms_img.png" alt="">
+                <img class="tp-img" src="./images/terms_img.png" alt="">
             </div>
         </div>
     </main>
