--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -30,13 +30,13 @@
             </form>
             <p id="sp-terms-para">
                 By signing up, you confirm that you have read and <br> accepted 
-                our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.
+                our <a href="#" class= "sp-a">Terms of Service</a> and <a href="#" class= "sp-a">Privacy Policy</a>.
             </p>
             <div class="sp-continue">
-                <button class="sp-contBtn"><a href="#">Continue</a></button>           
+                <button class="sp-contBtn"><a href="#" class= "sp-a">Continue</a></button>           
             </div>
             <hr class="sp-hr-footer">
-            <p class="sp-loginBtn">Already have an account? <a href="#">Log In</a></p>
+            <p class="sp-loginBtn">Already have an account? <a href="#" class= "sp-a">Log In</a></p>
         </div>
             <hr>
         </div>
